--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,9 +25,8 @@
   <script src="elm.js"></script>
   <!-- /build -->
   <script async src="https://www.google-analytics.com/analytics.js"></script>
-  <!-- build:js inline -->
   <script async src="js/analyticsBase.js"></script>
-  <!-- /build -->
+  <script async src="js/autotrack.custom.js"></script>
 </head>
 
 <body>
