build html without grunt

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,29 @@
-<!DOCTYPE html><html lang=en-us><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><title>Git Back</title><meta content="help out on open source project"name=description><meta content="Justin Kovalchuk / Raphael Megzari"name=author><link href=manifest.json rel=manifest><meta content=#3F51B5 name=theme-color><link href=favicon.ico rel=icon sizes=192x192><script>addEventListener("error",window.__e=function e(n){e.q=e.q||[],e.q.push(n)})</script><link href=styles/index.css rel=stylesheet><script src=elm.js></script><script src=https://www.google-analytics.com/analytics.js async></script><script src=js/analyticsBase.js async></script><body><script>Elm.App.fullscreen()</script>
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+  <meta charSet="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Git Back</title>
+  <meta name="description" content="help out on open source project" />
+  <meta name="author" content="Justin Kovalchuk / Raphael Megzari" />
+  <link rel="manifest" href="assets/manifest.json">
+  <meta name="theme-color" content="#3F51B5">
+  <link rel="icon" sizes="192x192" href="assets/favicon.ico">
+  <!-- script to track errors on the page-->
+  <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
+  <!--End of script-->
+  <link rel="stylesheet" href="public/styles/index-092a70.css">
+  
+  <script src="public/js/analyticsBase-b6fa62.js"></script>
+<script src="public/js/elm-1bfefd.js"></script>
+  <script async src="https://www.google-analytics.com/analytics.js"></script>
+  <script src="public/js/analyticsBase-b6fa62.js"></script>
+<script src="public/js/elm-1bfefd.js"></script>
+</head>
+
+<body>
+  <script> Elm.App.fullscreen() </script>
+</body>
+
+</html>
