--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,21 +7,30 @@
   <title>Git Back</title>
   <meta name="description" content="help out on open source project" />
   <meta name="author" content="Justin Kovalchuk / Raphael Megzari" />
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="assets/manifest.json">
   <meta name="theme-color" content="#3F51B5">
-  <link rel="icon" sizes="192x192" href="favicon.ico">
+  <link rel="icon" sizes="192x192" href="assets/favicon.ico">
   <!-- script to track errors on the page-->
   <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
+  <!--End of script-->
+  <!-- inject:css -->
   <link rel="stylesheet" href="styles/index.css">
+  <!-- endinject -->
+  <!-- remove:production -->
   <!--<link rel="preload" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" as="style" onload="this.rel='stylesheet'"/>
   <link rel="preload" href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" as="style"onload="this.rel='stylesheet'"/>
   <noscript>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" />
   </noscript>-->
-  <script src="elm.js"></script>
+  <!-- endremove -->
+  <!-- inject:js -->
+  <script src="js/elm.js"></script>
+  <!-- endinject -->
   <script async src="https://www.google-analytics.com/analytics.js"></script>
+  <!-- inject:js -->
   <script async src="js/analyticsBase.js"></script>
+  <!-- endinject -->
 </head>
 
 <body>
