--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" xmlns="https://www.w3.org/1999/xhtml" xmlns:og="https://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml">
 
 <head>
   <meta charSet="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Git Back</title>
-  <meta name="description" content="help out on open source project" />
+  <meta name="description" content="help out on open and unassigned issues on open source project in your favorite languages" />
   <meta name="author" content="Justin Kovalchuk / Raphael Megzari" />
+  <meta name="robots" content="index, follow">
   <link rel="manifest" href="assets/manifest.json">
   <meta name="theme-color" content="#3F51B5">
   <link rel="icon" sizes="192x192" href="assets/favicon.ico">
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "url": "https://git-back.herokuapp.com",
+      "name": "Contribute to OpenSource projects",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://git-back.herokuapp.com/{search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+</script>
+<meta property="og:title" content="Git back - contribute to open source projects"/>
+<meta property="og:type" content="website"/>
+<meta property="og:url" content="https://git-back.herokuapp.com"/>
+<meta property="og:image" content="assets/launcher_icon_3x.png"/>
+<meta property="og:site_name" content="Git back"/>
+<meta property="og:description" content="help out on open and unassigned issues on open source project in your favorite languages"/>
   <!-- script to track errors on the page-->
   <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
   <link rel="stylesheet" href="styles/index.css">
