--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html lang=en-us><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><title>Git Back</title><meta content="help out on open source project"name=description><meta content="Justin Kovalchuk / Raphael Megzari"name=author><link href=assets/manifest-d90ad4.json rel=manifest><meta content=#3F51B5 name=theme-color><link href=assets/favicon-6b2d39.ico rel=icon sizes=192x192><script>addEventListener("error",window.__e=function e(n){e.q=e.q||[],e.q.push(n)})</script><link href=styles/index-c3112e.css rel=stylesheet><script src=js/elm-666605.js></script><script src=https://www.google-analytics.com/analytics.js async></script><script src=js/analyticsBase-eb017c.js async></script><body><script>Elm.App.fullscreen()</script>
+<!DOCTYPE html><html lang=en-us xmlns=https://www.w3.org/1999/xhtml xmlns:fb=https://www.facebook.com/2008/fbml xmlns:og=https://ogp.me/ns#><meta charset=utf-8><meta content="width=device-width,initial-scale=1"name=viewport><title>Git Back</title><meta content="help out on open and unassigned issues on open source project in your favorite languages"name=description><meta content="Justin Kovalchuk / Raphael Megzari"name=author><meta content="index, follow"name=robots><link href=assets/manifest-d90ad4.json rel=manifest><meta content=#3F51B5 name=theme-color><link href=assets/favicon-6b2d39.ico rel=icon sizes=192x192><script type=application/ld+json>{
+      "@context": "http://schema.org",
+      "@type": "WebSite",
+      "url": "https://git-back.herokuapp.com",
+      "name": "Contribute to OpenSource projects",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://git-back.herokuapp.com/{search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }</script><meta content="Git back - contribute to open source projects"property=og:title><meta content=website property=og:type><meta content=https://git-back.herokuapp.com property=og:url><meta content=assets/launcher_icon_3x-6b2d39.png property=og:image><meta content="Git back"property=og:site_name><meta content="help out on open and unassigned issues on open source project in your favorite languages"property=og:description><script>addEventListener("error",window.__e=function e(n){e.q=e.q||[],e.q.push(n)})</script><link href=styles/index-c3112e.css rel=stylesheet><script src=js/elm-666605.js></script><script src=https://www.google-analytics.com/analytics.js async></script><script src=js/analyticsBase-eb017c.js async></script><body><script>Elm.App.fullscreen()</script>
