--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en-us" xmlns="https://www.w3.org/1999/xhtml" xmlns:og="https://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Git Back</title>
-  <meta name="description" content="help out on open and unassigned issues on open source project in your favorite languages" />
+  <meta charSet="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Git back - contribute to issues on open source projects</title>
+  <meta name="description" content="Check out unassigned, open issues on popular projects in your favorite languages. Give back to the open source community, learn, and get more visibility." />
   <meta name="author" content="Justin Kovalchuk / Raphael Megzari" />
   <meta name="robots" content="index, follow">
   <link rel="manifest" href="manifest.json">
@@ -24,12 +24,12 @@
       }
     }
 </script>
-<meta property="og:title" content="Git back - contribute to open source projects"/>
+<meta property="og:title" content="Git back - contribute to issues on open source projects"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://git-back.herokuapp.com"/>
 <meta property="og:image" content="assets/launcher_icon_3x.png"/>
 <meta property="og:site_name" content="Git back"/>
-<meta property="og:description" content="help out on open and unassigned issues on open source project in your favorite languages"/>
+<meta property="og:description" content="Check out unassigned, open issues on popular projects in your favorite languages. Give back to the open source community, learn, and get more visibility."/>
   <!-- script to track errors on the page-->
   <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
   <link rel="stylesheet" href="styles/index.css">
