--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,13 +24,6 @@
       }
     }
   </script>
-  <script>
-    if('serviceWorker' in navigator) {
-      navigator.serviceWorker
-              .register('/sw.js')
-              .then(function() { console.log("Service Worker Registered"); });
-    }
-  </script>
   <meta property="og:title" content="Git back - contribute to issues on open source projects"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://git-back.herokuapp.com"/>
@@ -39,12 +32,21 @@
   <meta property="og:description" content="Check out unassigned, open issues on popular projects in your favorite languages. Give back to the open source community, learn, and get more visibility."/>
   <!-- script to track errors on the page-->
   <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
+  <!-- build:css inline -->
   <link rel="stylesheet" href="styles/index.css">
+  <!-- /build -->
   <!--<link rel="preload" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" as="style" onload="this.rel='stylesheet'"/>
   <link rel="preload" href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css" as="style"onload="this.rel='stylesheet'"/>-->
   <script src="js/elm.js"></script>
   <script async src="https://www.google-analytics.com/analytics.js"></script>
   <script async src="js/analyticsBase.js"></script>
+  <script async>
+    if('serviceWorker' in navigator) {
+      navigator.serviceWorker
+        .register('/sw.js')
+        .then(function() { console.log("Service Worker Registered"); });
+    }
+  </script>
 </head>
 
 <body>
