add noscript tag
to enable showing some content without javascript

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,6 +50,10 @@
 </head>
 
 <body>
+  <noscript><p>As ludicrous as it will seem in this day and age, you will need javascript to run this page since it's built with Elm.<br>
+     As soon as Elm server side rendering is implemented it won't be the case anymore.<br>
+     Please wait...</p>
+  </noscript>
   <script> Elm.App.fullscreen() </script>
 </body>
 
