--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,18 +15,18 @@
     {
       "@context": "http://schema.org",
       "@type": "WebSite",
-      "url": "https://git-back.herokuapp.com",
+      "url": "https://git-back.com",
       "name": "Contribute to OpenSource projects",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://git-back.herokuapp.com/{search_term_string}",
+        "target": "https://git-back.com/{search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
   </script>
   <meta property="og:title" content="Git back - contribute to issues on open source projects"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="https://git-back.herokuapp.com"/>
+  <meta property="og:url" content="https://git-back.com"/>
   <meta property="og:image" content="assets/launcher_icon_3x.png"/>
   <meta property="og:site_name" content="Git back"/>
   <meta property="og:description" content="Check out unassigned, open issues on popular projects in your favorite languages. Give back to the open source community, learn, and get more visibility."/>
